--- a/vignettes/biocad_registry/exports.html
+++ b/vignettes/biocad_registry/exports.html
@@ -92,6 +92,12 @@ table caption {font-size:14px;font-weight:bolder;}
     <a href="./exports/export_smiles_data.html">export_smiles_data</a>
   </td>
   <td></td>
+</tr>
+<tr>
+  <td id="virtualcell_componentdb">
+    <a href="./exports/virtualcell_componentdb.html">virtualcell_componentdb</a>
+  </td>
+  <td></td>
 </tr></tbody>
       </table>
     </div>
