run package msbuild

--- a/vignettes/biocad_registry/models.html
+++ b/vignettes/biocad_registry/models.html
@@ -86,7 +86,12 @@ table caption {font-size:14px;font-weight:bolder;}
       <br />
       <table class="table-three-line">
         <caption>.NET clr function exports</caption>
-        <tbody></tbody>
+        <tbody><tr>
+  <td id="update_location">
+    <a href="./models/update_location.html">update_location</a>
+  </td>
+  <td></td>
+</tr></tbody>
       </table>
     </div>
     <hr />
