run package msbuild

--- a/vignettes/biocad_registry/models.html
+++ b/vignettes/biocad_registry/models.html
@@ -91,6 +91,12 @@ table caption {font-size:14px;font-weight:bolder;}
     <a href="./models/update_location.html">update_location</a>
   </td>
   <td></td>
+</tr>
+<tr>
+  <td id="register_metabolic_symbols">
+    <a href="./models/register_metabolic_symbols.html">register_metabolic_symbols</a>
+  </td>
+  <td></td>
 </tr></tbody>
       </table>
     </div>
