run package msbuild

--- a/vignettes/biocad_registry/models.html
+++ b/vignettes/biocad_registry/models.html
@@ -93,8 +93,20 @@ table caption {font-size:14px;font-weight:bolder;}
   <td></td>
 </tr>
 <tr>
+  <td id="update_metabolic_network">
+    <a href="./models/update_metabolic_network.html">update_metabolic_network</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
   <td id="register_metabolic_symbols">
     <a href="./models/register_metabolic_symbols.html">register_metabolic_symbols</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
+  <td id="resolve_metabolite_duplicates">
+    <a href="./models/resolve_metabolite_duplicates.html">resolve_metabolite_duplicates</a>
   </td>
   <td></td>
 </tr></tbody>
