--- a/vignettes/biocad_registry/registry.html
+++ b/vignettes/biocad_registry/registry.html
@@ -100,6 +100,12 @@ table caption {font-size:14px;font-weight:bolder;}
   <td></td>
 </tr>
 <tr>
+  <td id="imports_mona">
+    <a href="./registry/imports_mona.html">imports_mona</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
   <td id="imports_pubchem">
     <a href="./registry/imports_pubchem.html">imports_pubchem</a>
   </td>
