run package msbuild

--- a/vignettes/biocad_registry/registry.html
+++ b/vignettes/biocad_registry/registry.html
@@ -140,6 +140,12 @@ table caption {font-size:14px;font-weight:bolder;}
     <a href="./registry/save_TRN.html">save_TRN</a>
   </td>
   <td></td>
+</tr>
+<tr>
+  <td id="update_logo">
+    <a href="./registry/update_logo.html">update_logo</a>
+  </td>
+  <td></td>
 </tr></tbody>
       </table>
     </div>
