run package mbuild

--- a/vignettes/clr/registry_data/biocad_vocabulary.html
+++ b/vignettes/clr/registry_data/biocad_vocabulary.html
@@ -39,6 +39,10 @@ export class biocad_vocabulary {
    db_hmdb: integer;
    db_kegg: integer;
    db_lipidmaps: integer;
+   # LLM generated content data
+   db_LLMs: integer;
+   # manually audit content data
+   db_ManualAudit: integer;
    db_mesh: integer;
    db_pubchem: integer;
    db_uniprot: integer;
