--- a/vignettes/clr/registry_data/biocad_vocabulary.html
+++ b/vignettes/clr/registry_data/biocad_vocabulary.html
@@ -31,6 +31,7 @@
 # namespace registry_data
 export class biocad_vocabulary {
    db_biocyc: integer;
+   # CAS Registry Number
    db_cas: integer;
    db_chebi: integer;
    db_drugbank: integer;
