--- a/vignettes/biocad_registry/registry.html
+++ b/vignettes/biocad_registry/registry.html
@@ -106,6 +106,12 @@ table caption {font-size:14px;font-weight:bolder;}
   <td></td>
 </tr>
 <tr>
+  <td id="imports_spectraverse">
+    <a href="./registry/imports_spectraverse.html">imports_spectraverse</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
   <td id="imports_pubchem">
     <a href="./registry/imports_pubchem.html">imports_pubchem</a>
   </td>
