--- a/vignettes/biocad_registry/registry/imports_pubchem.html
+++ b/vignettes/biocad_registry/registry/imports_pubchem.html
@@ -27,7 +27,8 @@
         <h3>Usage</h3>
 
         <div style="width: 100%; padding-left: 3%; color: black;">
-            <pre><code class='language-R' style="color: black; font-weight:normal;"><strong>imports_pubchem</strong>(<i>registry</i>, <i>pubchem</i>);</code></pre>
+            <pre><code class='language-R' style="color: black; font-weight:normal;"><strong>imports_pubchem</strong>(<i>registry</i>, <i>pubchem</i>,
+    <i>skip.from</i> = <span style='color: green;'>0</span>);</code></pre>
         </div>
 
         <h3>Arguments</h3>
